cfn_benchmark/cfn_templates/aws-samples__genai-secure-networking-arch-patterns/hub-spoke-transit-gateway/hubResources.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Setup Consumer and Provider VPC infrastructure in the Hub account.

Parameters:

  ProjectName:
    Type: String
    Default: "TGW-GenAI-Project-Hub"
  ProviderVpcCIDR:
    Type: String
    Default: "10.3.0.0/16"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PrivateSubnet1CIDR:
    Type: String
    Default: "10.3.1.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PrivateSubnet2CIDR:
    Type: String
    Default: "10.3.2.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'

  ConsumerVpcCIDR:
    Type: String
    Default: "10.10.0.0/16"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PublicSubnet1CIDR:
    Type: String
    Default: "10.10.3.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PublicSubnet2CIDR:
    Type: String
    Default: "10.10.4.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  SpokeAccount:
    Type: String
    AllowedPattern: '^[0-9]{12}$'
  CognitoUserPoolUserEmail:
    Type: String
    Default: "someuser@email.com"
    AllowedPattern: '^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$'
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
  LambdaLayerBucket:
    Type: String
    Description: Bucket for the Lambda layer for JWT token validation

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Bedrock Infra Setup Parameters"
        Parameters:
          - ProjectName
          - ProviderVpcCIDR
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR

Resources:

  ProviderVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref ProviderVpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-provider-vpc
  ConsumerVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref ConsumerVpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-consumer-vpc

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet1CIDR
      VpcId: !Ref ProviderVPC
      AvailabilityZone: !Sub  "${AWS::Region}a"
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-subnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet2CIDR
      VpcId: !Ref ProviderVPC
      AvailabilityZone: !Sub  "${AWS::Region}b"
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-subnet2

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-IGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref ConsumerVPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ConsumerVPC
      AvailabilityZone: !Sub  "${AWS::Region}a"
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-subnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ConsumerVPC
      AvailabilityZone: !Sub  "${AWS::Region}b"
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-subnet1

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ConsumerVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  #########################
  #
  # ROUTE TABLES
  #
  #########################
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ProviderVPC

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ProviderVPC

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  BedrockLambdaFunctionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
        - !Ref StsPolicy
      Policies:
        - PolicyName: DynamoDBGetPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:BatchGetItem
                Resource: !GetAtt DynamoDBTable.Arn
        - PolicyName: GetSSMParameterPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: 'ssm:DescribeParameters'
                Resource: '*'
              - Effect: Allow
                Action: 'ssm:GetParameter'
                Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${JWKSSSMParameterTGW}"

  StsPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: !Sub ${ProjectName}-sts-policy
      Description: Policy for access to assume role in spoke account
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: "STSAllow"
            Effect: "Allow"
            Action:
              - "sts:AssumeRole"
            Resource: !Sub "arn:aws:iam::${SpokeAccount}:role/TGW-GenAI-Project-Spoke1-bedrock-hub-assume-role"

  JWTValidationLambdaLayer:
    Type: "AWS::Lambda::LayerVersion"
    Properties:
      Content:
        S3Bucket: !Ref LambdaLayerBucket
        S3Key: layer/jwt_lambda_layer.zip
      CompatibleRuntimes:
        - python3.12

  BedrockLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.lambda_handler
      Role: !GetAtt 'BedrockLambdaFunctionRole.Arn'
      Runtime: python3.12
      Environment:
        Variables:
          tenantMappingLookUpTable: !Ref DynamoDBTable
          CognitoUserPoolJWKSTGW: !Ref JWKSSSMParameterTGW
          cognitoUserPoolId: !GetAtt CognitoUserPool.UserPoolId
          cognitoUserPoolClientId: !GetAtt CognitoUserPoolClient.ClientId

      Timeout: 20
      MemorySize: 512
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
        SubnetIds:
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      Layers:
        - !Ref JWTValidationLambdaLayer
      Code:
        ZipFile: |
          import os
          import base64
          import json
          import boto3
          import jose.jwt
          from jose import jwk, jwt
          from jose.utils import base64url_decode

          # Set up Cognito user pool details
          region = os.environ['AWS_REGION']
          region = boto3.session.Session().region_name

          os.environ.get('CognitoUserPoolJWKSTGW', 'default')

          cognitoUserPoolId = os.environ.get('cognitoUserPoolId', 'default')
          cognitoUserPoolClientId = os.environ.get('cognitoUserPoolClientId', 'default')

          def validateTokenGetClaims(token):
              validatedClaims = {}

              #retrieve jwks from an SSM parameter named public_jwks
              endpoint_url='https://ssm.'+region+'.amazonaws.com'
              ssm_client = boto3.client('ssm', region_name=region, endpoint_url=endpoint_url)
              public_jwks = ssm_client.get_parameter(Name=os.environ.get('CognitoUserPoolJWKSTGW', 'default'), WithDecryption=True)
              cognito_jwks = json.loads(public_jwks['Parameter']['Value'])

              # Search for the kid in the downloaded public keys
              keys=cognito_jwks['keys']
              headers = jwt.get_unverified_headers(token)
              unverified_kid = headers['kid']
              key_index = -1
              for i in range(len(keys)):
                  if unverified_kid == keys[i]['kid']:
                      key_index = i
                      break

              if key_index == -1:
                  print('Public key not found in jwks.json')
                  raise ValueError('Unauthorized: Public key not found in jwks.json')
              else:
                  # Construct the public key
                  public_key = jwk.construct(keys[key_index])
                  # Verify the token
                  try:
                      payload = jwt.decode(
                          token,
                          public_key,
                          algorithms=['RS256'],
                          audience=cognitoUserPoolClientId,
                          issuer=f'https://cognito-idp.{region}.amazonaws.com/{cognitoUserPoolId}'
                      )
                      print(f'Token is valid. Claims: {payload}')
                      validatedClaims=payload
                  except jwt.JWTError as e:
                      print(f'Token is invalid: {e}')

              return validatedClaims

          def getTenantMapping(tenantId):
              endpoint_url='https://dynamodb.'+region+'.amazonaws.com'
              dynamoDB_client = boto3.client('dynamodb', region_name=region, endpoint_url=endpoint_url)
              #get the tenant mapping from the tenant mapping look up dynamoDB table with a hashkey of "tenantId"
              tenantMappingLookUpTable = os.environ.get('tenantMappingLookUpTable', 'default')
              tenant_mapping = dynamoDB_client.get_item(TableName=tenantMappingLookUpTable, Key={'tenant_id': {'S': tenantId}})
              return tenant_mapping

          def lambda_handler(event, context):
              print(event)

              body = event['body']
              try:
                  if event.get('isBase64Encoded', False):
                      decoded_bytes = base64.b64decode(body)
                      decoded_body = decoded_bytes.decode("utf-8")
                  else:
                      decoded_body = body
                  print("decoded_body", decoded_body)
              except Exception as e:
                  print(f"Error decoding body: {e}")
                  decoded_body = body  # Use raw body if decoding fails

              # Extract token from the authorization header
              if 'headers' in event and 'authorization' in event['headers']:
                  auth_header = event['headers']['authorization']
                  PREFIX = 'Bearer '
                  if auth_header.startswith(PREFIX):
                      token = auth_header[len(PREFIX):]
                      #print(f"Bearer token: {token}")
                  else:
                      print("Authorization header does not start with 'Bearer '")
              else:
                  print("Authorization header not found in the dictionary")

              validatedToken = validateTokenGetClaims(token)
              # Invoke Bedrock only if token is valid
              if validatedToken is not None and validatedToken:
                  tenantId = validatedToken['custom:tenant_id']
                  tenantMapping = getTenantMapping(tenantId)

                  #cross_account_role_arn = os.environ.get('cross_account_role_arn', 'default')
                  #tenant_bedrock_vpce_dns = os.environ.get('tenant_bedrock_vpce_dns', 'default')
                  cross_account_role_arn = tenantMapping['Item']['cross_account_role_arn']['S']
                  tenant_bedrock_vpce_dns = tenantMapping['Item']['tenant_bedrock_vpce_dns']['S']
                  model_id=tenantMapping['Item']['model_id']['S']
                  endpoint_url='https://sts.'+region+'.amazonaws.com'
                  sts_client = boto3.client('sts', region_name=region, endpoint_url=endpoint_url)

                  #Assume rule in spoke account
                  print("Assuming role in tenant account: ", cross_account_role_arn)
                  assumed_role_object = sts_client.assume_role(
                      RoleArn=cross_account_role_arn,
                      RoleSessionName="Assume-spoke-role-session"
                  )
                  #print(assumed_role_object)

                  credentials=assumed_role_object['Credentials']
                  #Create bedrock runtime client that points to the Bedrock VPCE in the spoke account
                  runtime_client = boto3.client(
                      'bedrock-runtime',
                      aws_access_key_id=credentials['AccessKeyId'],
                      aws_secret_access_key=credentials['SecretAccessKey'],
                      aws_session_token=credentials['SessionToken'],
                      endpoint_url="https://" + tenant_bedrock_vpce_dns
                  )

                  prompt_data = decoded_body
                  #The Text Generation Configuration are Titans inference parameters
                  text_gen_config = {
                      "maxTokenCount": 512,
                      "stopSequences": [],
                      "temperature": 0,
                      "topP": 0.9
                  }

                  body = json.dumps({
                      "inputText": prompt_data,
                      "textGenerationConfig": text_gen_config
                  })

                  accept = 'application/json'
                  content_type = 'application/json'

                  response = runtime_client.invoke_model(
                      body=body,
                      modelId=model_id,
                      accept=accept,
                      contentType=content_type
                  )

                  # Print response
                  response_body = json.loads(response['body'].read())
                  completion = response_body['results'][0]['outputText']
                  print(completion)

                  response_dict = {
                      'tenantId': tenantId,
                      'modelId': model_id,
                      'completion': completion
                  }
                  return {
                      'statusCode': 200,
                      'headers': {'Content-Type': 'application/json'},
                      'body': json.dumps(response_dict)
                  }
              else:
                  print("Token is invalid")
                  return {
                      'statusCode': 401,
                      'headers': {'Content-Type': 'application/json'},
                      'body': json.dumps('Unauthorized')
                  }

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Lambda Function to invoke VPC Endpoints.
      VpcId: !Ref ProviderVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-lambda-security-group

  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow TLS for VPC Endpoint. Allow traffic only Lambda function
      VpcId: !Ref ProviderVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-endpoint-security-group

  EndpointSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      GroupId: !Ref VPCEndpointSecurityGroup
      SourceSecurityGroupId: !Ref VPCEndpointSecurityGroup

  LambdaIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      GroupId: !Ref VPCEndpointSecurityGroup
      SourceSecurityGroupId: !Ref LambdaSecurityGroup

  #########################
  #
  # VPC ENDPOINTS
  #
  #########################

  STSVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                - !Ref AWS::AccountId
            Action:
              - 'sts:AssumeRole'
            Resource:
              - '*'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sts'
      VpcId: !Ref ProviderVPC

  SSMVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                - !Ref AWS::AccountId
            Action:
              - 'ssm:GetParameter'
            Resource:
              - '*'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcId: !Ref ProviderVPC

  DynamoDBVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Gateway
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.dynamodb"
      VpcId: !Ref ProviderVPC
      RouteTableIds:
        - !Ref PrivateRouteTable1
        - !Ref PrivateRouteTable2

###Create TGW tied to the above VPC
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      AmazonSideAsn: 64512
      Description: Transit Gateway for Hub
      DefaultRouteTableAssociation: enable
      DefaultRouteTablePropagation: enable
      AutoAcceptSharedAttachments: enable
      DnsSupport: enable
      VpnEcmpSupport: enable
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-tgw

  TgwRouteTable:
    Type: "AWS::EC2::TransitGatewayRouteTable"
    Properties:
      TransitGatewayId: !Ref TransitGateway
      Tags:
        - Key: Name
          Value: !Sub rt-${ProjectName}-tgw

  TransitGatewayAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref ProviderVPC
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-tgw-attachment

###Create a Resource Access Manager share and share the above TGW
##https://github.com/aws-samples/aws-transit-gateway-and-scalable-security-solutions/blob/main/transit-gateway.yaml
  ResourceShare:
    Type: AWS::RAM::ResourceShare
    Properties:
      Name: !Sub ${ProjectName}-tgw-share
      AllowExternalPrincipals: true
      # Use SpokePrincipalForTGWRAMShare parameter as principal
      Principals:
        - !Ref SpokeAccount
      ResourceArns:
        - !Sub arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${TransitGateway}

### Create a application load balancer
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${ProjectName}-alb
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Type: application

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS traffic
      VpcId: !Ref ConsumerVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-alb-security-group

  StreamlitEC2Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      GroupId: !Ref ALBSecurityGroup
      SourceSecurityGroupId: !Ref EC2PublicSecurityGroup

  PublicALBSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: '-1'
      GroupId: !Ref ALBSecurityGroup
      CidrIp: 0.0.0.0/0

#### Create a lambda target group for the alb
  LambdaTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: false
      Name: !Sub ${ProjectName}-alb-tg
      TargetType: lambda
      Targets:
      - Id: !GetAtt [ BedrockLambdaFunction, Arn ]

### create a AWS::Lambda::Permission resource that grants the Elastic Load Balancing service principal permission to invoke the Lambda function
  LambdaPermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !Ref BedrockLambdaFunction
      Action: lambda:InvokeFunction
      Principal: elasticloadbalancing.amazonaws.com

#### Assign the lambda target group to the alb
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/html
            MessageBody: "<h1>404 - Page Not Found</h1>"
            StatusCode: "404"
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP

  TenantInvokeRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref LambdaTargetGroup
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - "/tenant1/invoke*"
      ListenerArn: !Ref ALBListener
      Priority: 1

### Create a cognito user pool
  CognitoUserPool:
    Type: AWS::Cognito::UserPool
    Properties:
      AdminCreateUserConfig:
        AllowAdminCreateUserOnly: false
      UserPoolName: !Sub ${ProjectName}-user-pool
      UsernameAttributes:
        - email
      AutoVerifiedAttributes:
        - email
      Schema:
        - AttributeDataType: String
          Mutable: true
          Name: tenant_id

### Create an application client in the cognito user pool
  CognitoUserPoolClient:
    Type: AWS::Cognito::UserPoolClient
    Properties:
      ClientName: !Sub ${ProjectName}-user-pool-client
      GenerateSecret: false
      UserPoolId: !Ref CognitoUserPool
      AllowedOAuthFlowsUserPoolClient: True
      AllowedOAuthFlows:
        - code
      AllowedOAuthScopes: ['email','phone','openid']
      ExplicitAuthFlows:
      - USER_PASSWORD_AUTH
      CallbackURLs:
        - !Sub https://${ALB.DNSName}/oauth2/idpresponse

### Create a hosted UI for the cognito user pool
  CognitoUserPoolDomain:
    Type: AWS::Cognito::UserPoolDomain
    Properties:
      UserPoolId: !Ref CognitoUserPool
      Domain: !Join
        - '-'
        - - "bedrock-secure-hubspoke1"
          - !Select
            - 0
            - !Split
              - '-'
              - !Select
                - 2
                - !Split
                  - '/'
                  - !Ref AWS::StackId

#######################################################################
### Create an EC2 instance in the Consumer VPC to host the Streamlit UI
#######################################################################
  EC2PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Streamlit EC2 security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # Replace with your trusted IP range
        - IpProtocol: tcp
          FromPort: 8501
          ToPort: 8501
          CidrIp: 0.0.0.0/0 # Replace with your trusted IP range
      VpcId: !Ref ConsumerVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-security-group

  PublicSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: '-1'
      GroupId: !Ref EC2PublicSecurityGroup
      SourceSecurityGroupId: !Ref EC2PublicSecurityGroup

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref InstanceProfile
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref EC2PublicSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-ec2-instance

### Create a instance profile for the EC2 instance in the consumer VPC
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2Role

### Create a role that an EC2 instance in the consumer VPC can assume. The role needs access to cloudwatch logs and ec2-instance-connect
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Policies:
        - PolicyName: CloudWatchLogs
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: "*"
        - PolicyName: EC2InstanceConnect
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2-instance-connect:SendSSHPublicKey
                  - ec2:DescribeInstances
                Resource: "*"
        - PolicyName: CloudFormationRead
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - cloudformation:DescribeStacks
                Resource: "*"
        - PolicyName: DescribeUserPoolClient
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - cognito-idp:DescribeUserPoolClient
                Resource: !GetAtt CognitoUserPool.Arn
        - PolicyName: DynamoDBGetItem
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                Resource: !GetAtt DynamoDBTable.Arn

### Create a DynamoDB table that maps tenants to their respective routes, vpc-endpoints, cross-account roles
  DynamoDBTable:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: tenant_id
          AttributeType: S
      KeySchema:
        - AttributeName: tenant_id
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5

### SSM parameter to store the Cognito User Pool JWKS. This is used to validate JWT Tokens
  JWKSSSMParameterTGW:
    Type: AWS::SSM::Parameter
    Properties:
      Name: CognitoUserPoolJWKSTGW
      Type: String
      Value: '{"placeholder": "value"}'
      Description: SSM Parameter to store Cognito User Pool JSON Web Key Set (JWKS) to validate JWT Tokens

Outputs:
  ProviderVpcCIDR:
    Description: CIDR block for the Provider VPC
    Value: !Ref ProviderVpcCIDR
    Export:
      Name: !Sub "${AWS::StackName}-ProviderVpcCIDR"
  MappingDynamoDBTable:
    Description: The DyanmoDB table to define Tenant to Account Mapping
    Value: !Ref DynamoDBTable
    Export:
      Name: !Sub "${AWS::StackName}-DynamoDBTable"
  MappingDynamoDBTableArn:
    Description: The ARN of the DyanmoDB table to define Tenant to Account Mapping
    Value: !GetAtt DynamoDBTable.Arn
    Export:
      Name: !Sub "${AWS::StackName}-DynamoDBTableArn"
  CognitoUserPoolId:
    Description: The Cognito User Pool ID
    Value: !GetAtt CognitoUserPool.UserPoolId
    Export:
      Name: !Sub "${AWS::StackName}-CognitoUserPoolUserPoolId"
  CognitoUserPoolClientId:
    Description: The Cognito User Pool Client ID
    Value: !GetAtt CognitoUserPoolClient.ClientId
    Export:
      Name: !Sub "${AWS::StackName}-CognitoUserPoolClientClientId"
  TGWResourceShareArn:
      Description: The ARN of the TGW resource share
      Value: !Ref ResourceShare
  TGWID:
      Description: The ID of the TGW
      Value: !Ref TransitGateway
  HubProviderVPCID:
    Description: Hub Provider VPC ID
    Value: !GetAtt ProviderVPC.VpcId
  HubConsumerVPCID:
    Description: Hub Consumer VPC ID
    Value: !GetAtt ConsumerVPC.VpcId
  HubPrivateRouteTable1:
    Description: Route table for private subnet 1
    Value: !Ref PrivateRouteTable1
  HubPrivateRouteTable2:
    Description: Route table for private subnet 2
    Value: !Ref PrivateRouteTable2
  JWKSSSMParameterTGW:
    Description: SSM Parameter to store Cognito User Pool JSON Web Key Set (JWKS) to validate JWT Tokens
    Value: !Ref JWKSSSMParameterTGW
    Export:
      Name: !Sub "${AWS::StackName}-JWKSSSMParameterTGW"
  JWKSParameterArn:
    Description: ARN of the JWKS SSM Parameter
    Value: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${JWKSSSMParameterTGW}"
    Export:
      Name: !Sub "${AWS::StackName}-JWKSParameterArn"
  LambdaLayerBucket:
    Description: Bucket where the lambda layer is stored
    Value: !Ref LambdaLayerBucket
    Export:
      Name: !Sub "${AWS::StackName}-LambdaLayerBucket"
  ALBArn:
    Description: The Application Load Balancer ARN
    Value: !Ref ALB
  ALBDNSName:
    Description: The DNS name of the Application Load Balancer
    Value: !GetAtt ALB.DNSName
  LambdaTargetGroupArn:
    Description: The Lambda Target Group ARN
    Value: !Ref LambdaTargetGroup
  LambdaSecurityGroup:
    Description: The Lambda Target Group ARN
    Value: !Ref LambdaSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-LambdaSecurityGroup"
  PrivateSubnet1:
    Description: The Lambda Target Group ARN
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1"
  PrivateSubnet2:
    Description: The Lambda Target Group ARN
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2"
  JWTValidationLambdaLayer:
    Description: The Lambda Target Group ARN
    Value: !Ref JWTValidationLambdaLayer
    Export:
      Name: !Sub "${AWS::StackName}-JWTValidationLambdaLayer"
  ALBListenerArn:
    Description: The ARN of the ALB Listener
    Value: !Ref ALBListener
    Export:
      Name: !Sub "${AWS::StackName}-ALBListenerArn"
  SSMSessionManagerURL:
    Description: Session Manager URL to connect to Client App EC2
    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${EC2Instance}?region=${AWS::Region}"
