cfn_benchmark/cfn_templates/aws-samples__genai-secure-networking-arch-patterns/hub-spoke-transit-gateway/spokeResources.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Setup VPC infrastructure for testing amazon bedrock api using lambda over vpc endpoint.

Parameters:

  ProjectName:
    Type: String
    Default: "TGW-GenAI-Project-Spoke1"
  VpcCIDR:
    Type: String
    Default: "10.4.0.0/16"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PrivateSubnet1CIDR:
    Type: String
    Default: "10.4.1.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  PrivateSubnet2CIDR:
    Type: String
    Default: "10.4.2.0/24"
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
  HubAccount:
    Type: String
    AllowedPattern: '^[0-9]{12}$'
  BedrockModelId:
    Type: String
    Description: "Amazon Base Bedrock ModelId allowed by the VPC endpoint"
  ProviderVpcCIDR:
    Type: String
    Default: "10.3.0.0/16"
    Description: "CIDR block for the Provider VPC in the Hub account. Used to allow VPCEndpoint traffic only from the hub account."

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Bedrock Infra Setup Parameters"
        Parameters:
          - ProjectName
          - VpcCIDR
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-vpc
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet1CIDR
      VpcId: !Ref VPC
      AvailabilityZone: !Sub  "${AWS::Region}a"
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-subnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet2CIDR
      VpcId: !Ref VPC
      AvailabilityZone: !Sub  "${AWS::Region}b"
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-subnet2

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security group for bedrock workload in private subnets
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-security-group

  SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: '-1'
      GroupId: !Ref SecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup

  #########################
  #
  # ROUTE TABLES
  #
  #########################
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  #########################
  #
  # VPC ENDPOINTS
  #
  #########################
  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow TLS for VPC Endpoint
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-endpoint-security-group

  EndpointSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      GroupId: !Ref VPCEndpointSecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup

  EndpointSecurityGroupIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref ProviderVpcCIDR
      GroupId: !Ref VPCEndpointSecurityGroup

  VPCEndpointBedrockRuntime:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                - !Ref AWS::AccountId
            Action:
              - 'bedrock:InvokeModel'
            Resource:
              - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/${BedrockModelId}'

      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-runtime'
      VpcId: !Ref VPC

  BedrockHubAssumeRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${ProjectName}-bedrock-hub-assume-role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              AWS :
                - !Ref HubAccount
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - !Ref BedrockModelInvokePolicy

  BedrockModelInvokePolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: !Sub ${ProjectName}-bedrock-titan-policy
      Description: Policy for access to Bedrock Titan model
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: "BedrockTitalAllow"
            Effect: "Allow"
            Action:
              - "bedrock:InvokeModel"
            Resource:
              - !Sub 'arn:aws:bedrock:${AWS::Region}::foundation-model/${BedrockModelId}'

Outputs:
  BedrockHubAssumeRole:
    Description: The role that the lambda function in the hub account assumes
    Value: !GetAtt BedrockHubAssumeRole.Arn
  SpokeVPCID:
    Description: Spoke VPC ID
    Value: !GetAtt VPC.VpcId
  SubnetID1:
    Description: Subnet ID 1
    Value: !GetAtt PrivateSubnet1.SubnetId
  SubnetID2:
    Description: Subnet ID 2
    Value: !GetAtt PrivateSubnet2.SubnetId
  SpokePrivateRouteTable1:
    Description: Route table for private subnet 1
    Value: !Ref PrivateRouteTable1
  SpokePrivateRouteTable2:
    Description: Route table for private subnet 2
    Value: !Ref PrivateRouteTable2
  BedrockRuntimeVPCEDNS:
    Description: VPC Endpoint Regional DNS
    Value: !Select [1, !Split [':', !Select [0, !Split [" ", !Select [0, !GetAtt VPCEndpointBedrockRuntime.DnsEntries]]]]]
